--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   permission_handler:
   path: ^1.9.0
   dio: ^5.8.0+1
+  file_picker: ^10.1.9
 
 dev_dependencies:
   flutter_test:
