--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   file_picker: ^10.1.9
   geolocator: ^14.0.1
   geocoding: ^4.0.0
+  intl: ^0.20.2
+  web_socket_channel: ^3.0.3
 
 dev_dependencies:
   flutter_test:
