--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   geocoding: ^4.0.0
   intl: ^0.20.2
   web_socket_channel: ^3.0.3
+  google_mlkit_translation: ^0.13.0
+  translator: ^1.0.3+1
 
 dev_dependencies:
   flutter_test:
